--- a/src/app/dashboard.component.html
+++ b/src/app/dashboard.component.html
@@ -1,8 +1,8 @@
 <h3>Top Items</h3>
 <div class="grid grid-pad">
-  <div *ngFor="let item of inventory" class="col-1-4">
+  <a *ngFor="let item of inventory" [routerLink]="['/detail', item.id]" class="col-1-4">
     <div class="module inventory">
       <h4>{{item.name}}</h4>
     </div>
-  </div>
+  </a>
 </div>
